--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,84 +7,78 @@
     <title>Contacto</title>
 </head>
 
+
 <body>
 
-    <!-- header bs-->
-    <header class="navbar navbar-expand-lg header">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <a href="../index.html">
-                    <img class="logo" src="../imagenes/Logo.jpeg" alt="Logo" title="Logo Lupinos">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <nav class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li> <a href="../index.html">Inicio</a> </li>
-                        <li> <a href="tiendaonline.html" target="_blank">Tienda online</a> </li>
-                        <li> <a href="aromas.html" target="_blank">Aromas</a> </li>
-                    </ul>
-                </nav>
-        </div>
-    </header>
+<!-- header bs-->
+<header class="navbar navbar-expand-lg header">
+<div class="container-fluid">
+<a class="navbar-brand" href="#">
+<a href="../index.html">
+<img class="logo" src="../imagenes/Logo.jpeg" alt="Logo" title="Logo Lupinos">
+</a>
+<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<span class="navbar-toggler-icon"></span>
+</button>
+<nav class="collapse navbar-collapse" id="navbarNav">
+<ul class="navbar-nav">
+<li> <a href="../index.html">Inicio</a> </li>
+<li> <a href="tiendaonline.html" >Tienda online</a> </li>
+<li> <a href="aromas.html" >Aromas</a> </li>
+</ul>
+</nav>
+</div>
+</header>
 
 
 <!-- main  -->
 <main>
 
-    <h1>Contacto</h1>
+<h1>Contacto</h1>
 
+<form>   
 
-    <form action=""  class="contacto">   
-        <div>
-            <label for="Nombre"></label>
-            <input type="text" placeholder="Nombre " id= "Nombre">
+<div class="form_input">
+<input type="text" placeholder="Nombre">
 <div>
 
-    <form action="" class="contacto">   
-        <div>
-            <label for="Apellido"></label>
-            <input type="text" placeholder="Apellido " id= "Apellido">
+<div class="form_input">
+<input type="text" placeholder="Apellido ">
+</div>
 
+<div class="form_input">  
+<input type="email" required  placeholder="Mail">
 </div>
 
 <div>
-            <label for="Mail "></label class="contacto">
-            <input type="email" required  placeholder="Mail" id= "Mail" class="contacto">
-        </div>
-        <div>
-            <label for="Teléfono "></label class="contacto">
-            <input type="tel" required placeholder="Teléfono (Ej: 1123234545)" id= "Teléfono" class="contacto">
-        </div>
+<input type="tel" required placeholder="Teléfono (Ej: 1123234545)">
+</div>
 
-        </div>
-        
-        <div>
-            <label for="Mensaje"></label class="contacto">
-            <textarea name="Mensaje" required  id="Mensaje" cols="30" rows="10" placeholder="Escribí tu mensaje"></textarea class="contacto">
-        </div>
+</div>
+<label for="Mensaje"></label>
+<textarea name="Mensaje" required  id="Mensaje" cols="30" rows="10" placeholder="Escribí tu mensaje"></textarea >
+</div>
 
-        <div>
-            <button type="submit">Enviar</button class="contacto" class="contacto" >
-        </div>
-    </form>
+<div>
+<class="contacto_enviar" button type="submit">Enviar</button >
+</div>
+</form>
 
 </main>
 
 <!-- footer bs-->
 
-    <footer class="navbar bg-body-tertiary">
-        <div class="container-fluid" d-flex flex-column text-center>
-          <span class="navbar-text">
-            <a class="footer" href="preguntasfrecuentes.html" target="_blank">Preguntas Frecuentes</a>
-            <a class="footer" href="opiniones.html" target="_blank"> Opiniones</a>
-            <a class="footer" href="quienessomos.html" target="_blank"> Quienes somos</a>
-            <a class="footer" href="contacto.html" target="_blank"> Contacto</a>
-          </span>
-        </div>
-    </footer>
+<footer class="navbar bg-body-tertiary">
+<div class="container-fluid" d-flex flex-column text-center>
+<span class="navbar-text">
+<a class="footer" href="preguntasfrecuentes.html" >Preguntas Frecuentes</a>
+<a class="footer" href="opiniones.html" > Opiniones</a>
+<a class="footer" href="quienessomos.html" > Quienes somos</a>
+<a class="footer" href="contacto.html" > Contacto</a>
+</span>
+</div>
+</footer>
 
 </body>
 </html>
