--- a/pages/opiniones.html
+++ b/pages/opiniones.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Opiniones</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="../css/style.css">
+<title>Opiniones</title>
 </head>
 
 <body>
 
-    <!-- header -->
+<!-- header -->
 <header>
-    <a href="../index.html">
-        <img class="logo" src="../imagenes/Logo.jpeg" alt="Logo" title="Logo Lupinos">
-        </a>
+<a href="../index.html">
+<img class="logo" src="../imagenes/Logo.jpeg" alt="Logo" title="Logo Lupinos">
+</a>
 
 
 <nav>
-    <ul class="nav-listado">
+<ul class="nav-listado">
     
-        <li> <a href="../index.html">Inicio</a> </li>
-        <li> <a href="tiendaonline.html" >Tienda online</a> </li>
-        <li> <a href="aromas.html" > Aromas</a> </li>
-    </ul>
-    </nav>
+<li> <a href="../index.html">Inicio</a> </li>
+<li> <a href="tiendaonline.html" >Tienda online</a> </li>
+<li> <a href="aromas.html" > Aromas</a> </li>
+</ul>
+</nav>
 </header>
 
 <!-- main - testimonios luego de la compra -->
 <main> 
 
 
-    <h1>Opiniones</h1>
+<h1>Opiniones</h1>
 
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea eligendi eius molestias quaerat praesentium! Maiores fuga delectus perferendis aliquid excepturi deleniti. Id libero quaerat eveniet dicta et ipsam ut natus?</p>
+<p>Me ecantaron los aromas. Flores de naranjo fue mi favorito. Voy a volver a comprar para regalarle a mi mamá</p>
 
 </main>
 
 <!-- footer -->
-    <footer>
-        <nav>
-            <a href="preguntasfrecuentes.html" target="_blank" >Preguntas Frecuentes</a>
-            <a href="opiniones.html"> Opiniones</a>
-            <a href="quienessomos.html" target="_blank" > Quienes somos</a>
-            <a href="contacto.html" target="_blank" > Contacto</a>
-        </nav>
-    </footer>
+<footer>
+<nav>
+<a href="preguntasfrecuentes.html" >Preguntas Frecuentes</a>
+<a href="opiniones.html"> Opiniones</a>
+<a href="quienessomos.html" > Quienes somos</a>
+<a href="contacto.html" > Contacto</a>
+</nav>
+</footer>
 
 
 </body>
