--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -1,49 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Quienes somos</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="../css/style.css">
+<title>Quienes somos</title>
 </head>
 
 <body>
 
-    <!-- header -->
+<!-- header -->
 <header>
 <a href="../index.html">
 <img class="logo" src="../imagenes/Logo.jpeg" alt="Logo" title="Logo Lupinos">
 </a>
 
 
-    <nav>
-        <ul class="nav-listado">
+<nav>
+<ul class="nav-listado">
         
-            <li> <a href="../index.html">Inicio</a> </li>
-            <li> <a href="tiendaonline.html" >Tienda online</a> </li>
-            <li> <a href="aromas.html" > Aromas</a> </li>
-        </ul>
-        </nav>
+<li> <a href="../index.html">Inicio</a> </li>
+<li> <a href="tiendaonline.html" >Tienda online</a> </li>
+<li> <a href="aromas.html" > Aromas</a> </li>
+</ul>
+</nav>
 </header>
 
 <!-- main -->
 <main>
-    <h1>Quienes Somos</h1>
+<h1>Quiénes Somos</h1>
 
-    <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio in quo beatae voluptatibus dolorem, eveniet sequi incidunt officia libero veniam, rem iure nobis perferendis quisquam vero, doloremque adipisci dolor. Esse!
-    </P>
+<P> Somos una pyme argentina creada en el 2018 que comercializa productos aromáticos en el Alto Valle. Lupinos nace con el propósito de transformar nuestra rutina ofreciendo una línea de productos que invitan a conectar con los mas ricos aromas. Nuestra misión es es que cada uno de nuestros productos no solo decoren tus espacios sino tambien te brinden un confort olfativo. Esperamos que los disfruten tanto como lo hacemos nosotros.
+</P>
+
+<img class="vela3" src="../imagenes/velahab.jpeg" alt="velahab">
+    
 
 </main>
 
 <!-- footer -->
-    <footer>
-        <nav>
-            <a href="preguntasfrecuentes.html" target="_blank" >Preguntas Frecuentes</a>
-            <a href="opiniones.html" target="_blank" > Opiniones</a>
-            <a href="quienessomos.html"> Quienes somos</a>
-            <a href="contacto.html" target="_blank" > Contacto</a>
-   
-   </nav> 
+<footer>
+<nav>
+<a href="preguntasfrecuentes.html" >Preguntas Frecuentes</a>
+<a href="opiniones.html"  > Opiniones</a>
+<a href="quienessomos.html"> Quienes somos</a>
+<a href="contacto.html" > Contacto</a>
+
+</nav> 
 </footer>
 
 </body>
