--- a/index.html
+++ b/index.html
@@ -2,110 +2,109 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lupinos</title>
-    <!-- CSS BS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">"
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="En Lupinos vas a encontrar productos con aromas de calidad para tu hogar y tus espacios">
+<link rel="stylesheet" href="../css/style.css">
+<title>Lupinos</title>
+
+<!-- CSS BS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">"
+<!-- CSS -->
+<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
 <!-- Navbar BS-->
 
-    <header class="navbar navbar-expand-lg header">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <a href="index.html">
-                    <img class="logo" src="imagenes/Logo.jpeg" alt="Logo" title="Logo Lupinos">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <nav class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li> <a href="index.html">Inicio</a> </li>
-                        <li> <a href="pages/tiendaonline.html" target="_blank">Tienda online</a> </li>
-                        <li> <a href="pages/aromas.html" target="_blank">Aromas</a> </li>
-                    </ul>
-                </nav>
-                <button class="Iniciar Sesión"> Iniciar Sesión </button>
-                <button class="Crear cuenta"> Crear Cuenta </button>
-        </div>
-    </header>
+<header class="navbar navbar-expand-lg header">
+<div class="container-fluid">
+<a class="navbar-brand" href="#">
+<a href="index.html">
+<img class="logo" src="imagenes/Logo.jpeg" alt="Logo" title="Logo Lupinos">
+</a>
+<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<span class="navbar-toggler-icon"></span>
+</button>
+<nav class="collapse navbar-collapse" id="navbarNav">
+<ul class="navbar-nav">
+<li> <a href="index.html">Inicio</a> </li>
+<li> <a href="pages/tiendaonline.html" >Tienda online</a> </li>
+<li> <a href="pages/aromas.html">Aromas</a> </li>
+</ul>
+</nav>
+<button class="Iniciar Sesión"> Iniciar Sesión </button>
+<button class="Crear cuenta"> Crear Cuenta </button>
+</div>
+</header>
 
-    <!-- main -->
-    <main class="row">
+<!-- main -->
+<main class="row">
 
-        <div class="tarjeta col-xl-4 col-md-6 col-sm-12">
-            <section>
-                <h1>¿Disfrutás de los aromas en tus espacios?</h1>
-                    <p>Conocé nuestros productos y llená de ricos aromas todos tus ambientes
-                    </p>
+<div>
+<section>
+<h1>¿Disfrutás de los aromas en tus espacios?</h1>
+<p>Conocé nuestros productos y llená de ricos <strong> aromas </strong> todos tus ambientes</p>
 
-                    <nav>
-                        <a href="pages/tiendaonline.html" target="_blank">Comprá acá</a>
-                        <a href="pages/aromas.html" target="_blank"> Conocé los aromas</a>
+<nav>
+<a href="pages/tiendaonline.html" target="_blank">Comprá acá</a>
+<a href="pages/aromas.html" target="_blank"> Conocé los aromas</a>
+</nav>
 
-                    </nav>
+<img class="aromatizador1" src="imagenes/aromatizador.jpeg" alt="aromatizador">
+<img class="vela2" src="imagenes/Vela2.jpeg" alt="vela">
 
-                    <img class="aromatizador1" src="imagenes/aromatizador.jpeg" alt="aromatizador">
-                    <img class="vela2" src="imagenes/Vela2.jpeg" alt="vela">
-        </div>
 
-        <div class="tarjeta col-xl-4 col-md-6 col-sm-12">
-            <section id="opiniones">
-                <article>
-                    <h2> Opiniones </h2>
-                        <p class="opiniones"> "Compré una vela, un aromatizador y un difusor para regalarle a mi
-                            mejor amiga y le encantaron los aromas. La presentación era hermosa. Volveré a
-                            comprar para mí."</p>
-                        <p class="opiniones">Malena Rodriguez, Buenos Aires</p>
-                </article>
-            </section>
-        </div>
+<div>
+<section id="opiniones">
+<article>
+<h2> Opiniones </h2>
+<p class="opiniones"> "Compré una vela, un aromatizador y un difusor para regalarle a mi mejor amiga y le encantaron los aromas. La presentación era hermosa. Volveré a
+comprar para mí."</p>
+<p class="opiniones">Malena Rodriguez, Buenos Aires</p>
+</article>
+</section>
+</div>
 
-        <div class="tarjeta col-xl-4 col-md-6 col-sm-12">
-            <section id="novedades">
-                <article>
-                    <h3> ¿Querés estar al tanto de las novedades? </h3>
-                        <p class="novedades">Ingresá tus datos para mantenerte al tanto de las novedades. Además
-                            podés obtener un 10% para tu primer compra online. </p>
+<div>
+<section id="novedades">
+<article>
+<h3> ¿Querés estar al tanto de las novedades? </h3>
+<p class="datos">Ingresá tus datos para mantenerte al tanto de las novedades. Además podés obtener un 10% para tu primer compra online. </p>
 
-                        <label for="Mail"> Mail:</label>
-                        <input type="text" required placeholder="Mail" id="Mail">
-                        <label for="">Nombre y apellido:</label>
-                        <input type="text" required placeholder="Nombre y Apellido" id="Nombre y Apellido">
+<label for="Mail"> Mail:</label>
+<input type="text" required placeholder="Mail" id="Mail">
+<label for="">Nombre y apellido:</label>
+ <input type="text" required placeholder="Nombre y Apellido" id="Nombre y Apellido">
 
-                        <button type="submit">Suscribirme</button>
-        </div>
-        </article>
-        </section>
+<button type="submit">Suscribirme</button>
+</div>
+</article>
+</section>
 
-    </main>
+</main>
 
-    <!-- footer bs -->
+<!-- footer bs -->
 
-    <footer class="navbar bg-body-tertiary">
-        <div class="container-fluid" d-flex flex-column text-center>
-          <span class="navbar-text">
-            <a class="footer" href="pages/preguntasfrecuentes.html" target="_blank">Preguntas Frecuentes</a>
-            <a class="footer" href="pages/opiniones.html" target="_blank"> Opiniones</a>
-            <a class="footer" href="pages/quienessomos.html" target="_blank"> Quienes somos</a>
-            <a class="footer" href="pages/contacto.html" target="_blank"> Contacto</a>
-          </span>
-        </div>
-    </footer>
+<footer class="navbar bg-body-tertiary">
+<div class="container-fluid" d-flex flex-column text-center>
+<span class="navbar-text">
+<a class="footer" href="pages/preguntasfrecuentes.html" >Preguntas Frecuentes</a>
+<a class="footer" href="pages/opiniones.html" > Opiniones</a>
+<a class="footer" href="pages/quienessomos.html" > Quienes somos</a>
+<a class="footer" href="pages/contacto.html" > Contacto</a>
+</span>
+</div>
+</footer>
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+crossorigin="anonymous"></script>
 
 
 </body>
