--- a/pages/aromas.html
+++ b/pages/aromas.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Aromas</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="../css/style.css">
+<title>Aromas</title>
 </head>
 
 <body>
 
-    <!-- header -->
-    <header>
-        <a href="../index.html">
-            <img class="logo" src="../imagenes/Logo.jpeg" alt="Logo" title="Logo Lupinos">
-            </a>
+<!-- header -->
+<header>
+<a href="../index.html">
+<img class="logo" src="../imagenes/Logo.jpeg" alt="Logo" title="Logo Lupinos">
+</a>
 
 <nav>
 <ul class="nav-listado">
 
-    <li> <a href="../index.html">Inicio</a> </li>
-    <li> <a href="tiendaonline.html" >Tienda online</a> </li>
-    <li> <a href="aromas.html" > Aromas</a> </li>
+<li> <a href="../index.html">Inicio</a> </li>
+<li> <a href="tiendaonline.html" >Tienda online</a> </li>
+<li> <a href="aromas.html" > Aromas</a> </li>
 </ul>
 </nav>
 </header>
@@ -36,12 +36,12 @@
 
 <!-- footer -->
 <footer>
-    <nav>
-        <a href="preguntasfrecuentes.html" target="_blank" >Preguntas Frecuentes</a>
-        <a href="opiniones.html" target="_blank" > Opiniones</a>
-        <a href="quienessomos.html" target="_blank" > Quienes somos</a>
-        <a href="contacto.html" target="_blank" > Contacto</a>
-    </nav>
+<nav>
+<a href="preguntasfrecuentes.html" >Preguntas Frecuentes</a>
+<a href="opiniones.html"  > Opiniones</a>
+<a href="quienessomos.html" > Quienes somos</a>
+<a href="contacto.html" > Contacto</a>
+</nav>
 </footer>
 
 
